--- a/app/views/warehouse/warehouses.scala.html
+++ b/app/views/warehouse/warehouses.scala.html
@@ -4,11 +4,9 @@
 
 @import helper._
 
-@main("The List of Warehouses") {
+@main.main("The List of Warehouses") {
 
     <h2>The list of Warehouses</h2>
-
-    <a href="@controllers.company.routes.Companies.newCompany()">New Warehouse</a>
 
     <table>
         <tr>
